@@ -2,7 +2,7 @@
    <div>
       <!-- BEGIN add-link --><span class="menu-admin">{ADMIN}
       <!-- BEGIN admin-links --><div class="menu-link-pop">
-      {PIN_LINK} {ADD_LINK} {ADD_SITE_LINK} {EDIT_LINK} {DELETE_LINK} {MOVE_LINK_UP}{MOVE_LINK_DOWN}</div><!-- END admin-links --></span><!-- END add-link -->
+      {PIN_LINK} {ADD_LINK} {ADD_SITE_LINK} {EDIT_LINK} {DELETE_LINK} {LINK_INDENT} {LINK_OUTDENT} {MOVE_LINK_UP}{MOVE_LINK_DOWN}</div><!-- END admin-links --></span><!-- END add-link -->
    {LINK}
    <!-- BEGIN hide-sub --><ul><!-- BEGIN sublink -->{SUBLINK}<!-- END sublink --></ul><!-- END hide-sub --></div>
 </li>
