@@ -17,7 +17,7 @@
     color : inherit;
     top : -2px;
     left : 0px;
-    width : 120px;
+    width : 140px;
 }
 
 #menu-site-map ol {
